# atelier-of-synthetic-voice

./: .gitignore  README.md  justfile  launch.sh  main.py  pyproject.toml  requirements.txt  setup.sh  test_e2e.py  test_inference.py  test_inference2.py  test_inference3.py  test_inference4.py  test_inference5.py  test_inference6.py
.github/ISSUE_TEMPLATE/: bug_report.md
core/: dataset.py  engine.py  extractor.py  profiles.py  tokenizer.py  trainer.py
ui/: __init__.py  flet_app.py
voices/: app_settings.json.example
